# myprograms

./: README.md  alembic.ini  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml  queries.sql
alembic/: env.py
alembic/versions/: 2024_12_12_1426-b6a128f5949c_create_products_table.py  2024_12_12_1446-43bac7abc6bb_create_users_table.py  2024_12_12_1457-025f8fa705fd_create_posts_table.py  2024_12_12_1553-50c164976b3d_create_profile_table.py
api_v1/: __init__.py
api_v1/demo_auth/: demojwtauth.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: utils.py
core/: config.py
core/models/: base.py  db_helper.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
shop-app/: pyproject.toml
users/: crud.py  schemas.py  views.py
