[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["ribondareva <msbondareva01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic = {extras = ["email"], version = "^2.10.3"}
sqlalchemy = {extras = ["asincio"], version = "^2.0.36"}


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
